List Containers - little visual issue on Safari

--- a/swift authentication (under development)/css/main.less
+++ b/swift authentication (under development)/css/main.less
@@ -335,6 +335,7 @@ body:not(.freeze-all) .current-dir-label a:hover,
   display: flex;
   flex-direction: column;
   -webkit-transition: 300ms background 0 ease-in;
+  background-color: #f5f5f5;
 }
 .code-editor-is-shown .content-wrapper{
   display: none;
@@ -348,6 +349,7 @@ body:not(.freeze-all) .current-dir-label a:hover,
   position: relative;
   -webkit-flex: 1;
   flex: 1;
+  background-color: #f5f5f5;
 }
 body.report-shown #content{
   display: none;
@@ -1133,6 +1135,7 @@ template{
   background: url(../img/three_dot.png) center center no-repeat, @darkItemElementColor;
   border: none;
   outline: none;
+  margin: 0;
 }
 .no-hover .three-dot{
   background: @darkItemElementColor;
